0.02

0.01 2024-04-29T13:21:57+02:00
 - First version.