@@ -96,6 +96,14 @@ ERRORS
      new():
              From Class::Utils::set_params():
                      Unknown parameter '%s'.
+             From Mo::utils::CSS::check_css_unit():
+                     Parameter 'width' doesn't contain number.
+                             Value: %s
+                     Parameter 'width' doesn't contain unit.
+                             Value: %s
+                     Parameter 'width' contain bad unit.
+                             Unit: %s
+                             Value: %s
              From Mo::utils::Language::check_language_639_2():
                      Parameter 'lang' doesn't contain valid ISO 639-2 code.
                              Codeset: %s
