@@ -1,4 +1,5 @@
 0.02
+ - Add check for 'width' parameter if it's CSS unit.
 
 0.01 2024-04-29T13:21:57+02:00
  - First version.
